--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,26 @@ dist-ssr
 *.sw?
 
 # Environment variables
+.env
 .env.local
 .env.*.local
+.env.development
+.env.production
+
+# Claude Code & Claude Flow
+.claude/
+.claude-flow/
+
+# Swarm coordination
+.swarm/
+*.db
+*.db-shm
+*.db-wal
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Build artifacts
+build/
+.cache/
